Fix issue where carousel is too wide and overflows in landscape mode on mobile FireFox, Opera Touch (mobile) and mobile Edge

--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -14,6 +14,8 @@
   width: 100vw;
   height: 100vh;
   /*noinspection CssInvalidPropertyValue*/
+  max-width: stretch;
+  /*noinspection CssInvalidPropertyValue*/
   max-height: stretch;
   background-color: #fff;
 }
